Adjust wording to be more precise.

--- a/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
+++ b/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
@@ -33,7 +33,7 @@
             "prototype": "blue-shark/ui/button.reel",
             "properties": {
                 "element": {"#": "refresh"},
-                "value": "Scan volumes"
+                "value": "Scan for volumes"
             }
         },
         "encrypted": {
