--- a/ui/sections/storage/inspectors/volume-media-importer.reel/volume-media-importer.html
+++ b/ui/sections/storage/inspectors/volume-media-importer.reel/volume-media-importer.html
@@ -35,7 +35,7 @@
             "prototype": "blue-shark/ui/button.reel",
             "properties": {
                 "element": {"#": "refreshMedia"},
-                "value": "Scan media"
+                "value": "Scan for media"
             }
         },
         "mediaFsType": {
