--- a/ui/inspectors/inspector.reel/inspector.html
+++ b/ui/inspectors/inspector.reel/inspector.html
@@ -87,7 +87,7 @@
             },
             "bindings": {
                 "value": {"<-": "@owner.context.object.path(@owner.context.userInterfaceDescriptor.nameExpression)"},
-                "classList.has('is-hidden')": {"<-": "!@owner.hasHeader"}
+                "classList.has('is-hidden')": {"<-": "@owner.hideHeader"}
             }
         }
     }
