adds inspector to services category view

--- a/ui/inspectors/services-category.reel/services-category.html
+++ b/ui/inspectors/services-category.reel/services-category.html
@@ -13,16 +13,6 @@
                 "selectedObject": {"<->": "@services.selectedObject"}
             }
         },
-        "overview": {
-            "prototype": "./services-category-overview.reel",
-            "properties": {
-                "element": {"#": "overview"}
-            },
-            "bindings": {
-                "object": {"<-": "@owner.object"},
-                "services": {"<-": "@owner.categoryServices"}
-            }
-        },
         "controller": {
             "prototype": "montage/core/range-controller",
             "properties": {
@@ -39,12 +29,14 @@
                 "controller": {"@": "controller"}
             }
         },
-        "scrollview": {
-            "prototype": "blue-shark/ui/scrollview.reel",
+        "inspector": {
+            "prototype": "ui/inspectors/inspector.reel",
             "properties": {
-                "element": {"#": "scrollview"},
-                "hasFixedFooter": false,
-                "overflow": "scrollY"
+                "element": {"#": "inspector"},
+                "hasFixedFooter": false
+            },
+            "bindings": {
+                "context": {"<-": "@owner.context"}
             }
         }
     }
@@ -52,9 +44,8 @@
 </head>
 <body>
     <div data-montage-id="owner" class="Share">
-        <div data-montage-id="overview"></div>
-        <div data-montage-id="scrollview">
-            <div data-montage-id="services"></div>
+        <div data-montage-id="inspector">
+            <div data-montage-id="services" class="g-margin--subtract"></div>
         </div>
     </div>
 </body>
