removes bgcolor from volume importer

--- a/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
+++ b/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
@@ -51,7 +51,7 @@
     <div data-montage-id="owner" class="VolumeImporter">
         <div class="VolumeImporter-detachedVolumes">
             <div data-montage-id="detachedVolumes"></div>
-            <div class="bg-c--grey flex-row flex-justifyContent--center flush-top">
+            <div class="flex-row flex-justifyContent--center flush-top">
                 <div data-montage-id="refresh" class="g-margin-v"></div>
             </div>
         </div>
