Use number-unit component for replication calendar-task

--- a/ui/inspectors/calendar-task.reel/replication-args.reel/replication-args.html
+++ b/ui/inspectors/calendar-task.reel/replication-args.reel/replication-args.html
@@ -91,12 +91,13 @@
             }
         },
         "throttle": {
-            "prototype": "blue-shark/ui/field-text-input.reel",
+            "prototype": "blue-shark/ui/field-number-unit.reel",
             "properties": {
                 "element": {"#": "throttle"},
-                "label": "Throttling (B/s)"
+                "label": "Throttling"
             },
             "bindings": {
+                "units": {"<-": "@owner.throttleUnits"},
                 "value": {"<->": "@owner.throttle"}
             }
         },
