Use number-unit component for docker containers

--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -85,31 +85,14 @@
             }
         },
 
-        "memoryValidator": {
-            "prototype": "core/converter/validator/minimum-bytes-validator",
-            "properties": {
-                "allowDecimal": false,
-                "errorMessage": "Memory must be a positive integer size at least 1MiB.",
-                "minPrefix": "M",
-                "minValue": 1
-            }
-        },
-
-        "memoryConverter": {
-            "prototype": "core/converter/string-to-integer-or-null-converter",
-            "properties": {
-                "validator": {"@": "memoryValidator"}
-            }
-        },
-
         "memoryLimit": {
-            "prototype": "blue-shark/ui/field-text-input.reel",
+            "prototype": "blue-shark/ui/field-number-unit.reel",
             "properties": {
                 "element": {"#": "memoryLimit"},
-                "converter": {"@": "memoryConverter"},
                 "label": "Memory Limit"
             },
             "bindings": {
+                "units": {"<-": "@owner.memoryUnits"},
                 "value": {"<->": "@owner.object.memory_limit"}
             }
         },
