--- a/ui/sections/containers/inspectors/docker-host.reel/docker-host.html
+++ b/ui/sections/containers/inspectors/docker-host.reel/docker-host.html
@@ -218,11 +218,11 @@
             }
         },
 
-        "kill": {
+        "shutdown": {
             "prototype": "blue-shark/ui/button.reel",
             "properties": {
-                "element": {"#": "kill"},
-                "value": "Kill"
+                "element": {"#": "shutdown"},
+                "value": "Shutdown"
             },
             "bindings": {
                 "disabled": {"<-": "@owner.object.state == 'DOWN'"}
@@ -262,8 +262,8 @@
                     <div data-montage-id="start" data-arg="DOWN"></div>
                     <div data-montage-id="stop" data-arg="UP"></div>
                 </span>
+                <div data-montage-id="shutdown"></div>
                 <div data-montage-id="reboot"></div>
-                <div data-montage-id="kill"></div>
                 <div data-montage-id="serialConsole"></div>
             </div>
             <div data-montage-id="name"></div>
