Disable create peer when username/password is empty

--- a/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
+++ b/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
@@ -8,6 +8,9 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
+            },
+            "bindings": {
+                "shouldDisableSave": {"<-": "!!@owner.object._isNew && (!@owner.object.username || !@owner.object.password)"}
             }
         },
         "substitution": {
@@ -67,7 +70,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "username"},
-                "label": "Username"
+                "label": "Username",
+                "isMandatory": true
             },
             "bindings": {
                 "value": {"<->": "@owner.object.username"}
@@ -78,7 +82,8 @@
             "properties": {
                 "element": {"#": "password"},
                 "label": "Password",
-                "placeholder": "enter password"
+                "placeholder": "enter password",
+                "isMandatory": true
             },
             "bindings": {
                 "value": {"<->": "@owner.object.password"}
