--- a/ui/sections/peering/inspectors/vmware-credentials.reel/vmware-credentials.html
+++ b/ui/sections/peering/inspectors/vmware-credentials.reel/vmware-credentials.html
@@ -8,6 +8,9 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
+            },
+            "bindings": {
+                "shouldDisableSave": {"<-": "!!@owner.object._isNew && (!@owner.object.credentials.username || !@owner.object.credentials.password)"}
             }
         },
         "name": {
@@ -34,7 +37,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "username"},
-                "label": "Username"
+                "label": "Username",
+                "isMandatory": true
             },
             "bindings": {
                 "value": {"<->": "@owner.object.credentials.username"}
@@ -45,7 +49,8 @@
             "properties": {
                 "element": {"#": "password"},
                 "label": "Password",
-                "placeholder": "enter password"
+                "placeholder": "enter password",
+                "isMandatory": true
             },
             "bindings": {
                 "value": {"<->": "@owner.object.credentials.password"}
