--- a/ui/sections/peering/inspectors/peer.reel/peer.html
+++ b/ui/sections/peering/inspectors/peer.reel/peer.html
@@ -8,8 +8,8 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"},
-                "inspector": {"@": "inspector"}
-
+                "inspector": {"@": "inspector"},
+                "credentials": {"@": "credentials"}
             },
             "listeners": [
                 {
@@ -40,7 +40,8 @@
             "bindings": {
                 "context": {"<-": "@owner.context"},
                 "isConfirmationVisible": {"<-": "@owner.isConfirmationVisible"},
-                "confirmationMessage": {"<-": "'Are you sure you want to delete ' + @owner.object.var + '?'"}
+                "confirmationMessage": {"<-": "'Are you sure you want to delete ' + @owner.object.var + '?'"},
+                "isSaveDisabled": {"<-": "@owner.credentials.component.shouldDisableSave.defined() && @owner.credentials.component.shouldDisableSave"}
             }
         },
         "credentials": {
