Hide header for sectionRoot extra entries
Ticket: #20964
Ticket: #20953

--- a/ui/controls/section-root.reel/section-root.html
+++ b/ui/controls/section-root.reel/section-root.html
@@ -41,7 +41,7 @@
             "prototype": "ui/controls/viewer.reel",
             "properties": {
                 "element": {"#": "extraEntries"},
-                "hideCreateButton": true
+                "hideTitle": true
             },
             "bindings": {
                 "object": {"<-": "@owner.object.extraEntries"},
