--- a/ui/controls/viewer.reel/viewer.html
+++ b/ui/controls/viewer.reel/viewer.html
@@ -54,7 +54,7 @@
                 "hasTemplate": false
             },
             "bindings": {
-                "classList.has('is-hidden')": {"<-": "!@title.value.length"}
+                "classList.has('is-hidden')": {"<-": "!!@owner.hideTitle || !@title.value.length"}
             }
         },
         "title": {
