Clean up docker image search component.

--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -60,8 +60,8 @@
                 "element": {"#": "image"}
             },
             "bindings": {
-                "_sectionService": {"<-": "@owner._sectionService"},
-                "collection": {"<-": "@owner._collection"}
+                "dockerImagesPromise": {"<-": "@owner.context.dockerImagesPromise"},
+                "collection": {"<-": "@owner.context.dockerCollection"}
             }
         },
 
