List support streaming responses. (WIP)

--- a/ui/controls/list.reel/list.html
+++ b/ui/controls/list.reel/list.html
@@ -25,7 +25,7 @@
                 "isSelectionEnabled": true
             },
             "bindings": {
-                "contentController": {"<-": "@owner.controller"}
+                "content": {"<-": "@owner.object"}
             }
         },
         "item": {
@@ -38,6 +38,17 @@
                 "object": {"<-": "@repetition:iteration.object"},
                 "showSubLabel": {"<-": "@owner.showSubLabel"}
             }
+        },
+
+        "loading": {
+            "prototype": "blue-shark/ui/text.reel",
+            "properties": {
+                "element": {"#": "loading"},
+                "value": "loading data..."
+            },
+            "bindings": {
+                "classList.has('hide')": {"<-": "!@owner.isLoadingData"}
+            }
         }
     }
     </script>
@@ -48,6 +59,7 @@
         <div data-montage-id="repetition">
             <div data-montage-id="item" class="List-item"></div>
         </div>
+        <div data-montage-id="loading"></div>
     </div>
 </body>
 </html>
