Add inspectors tests on services section

--- a/ui/inspectors/services-category.reel/services-category.html
+++ b/ui/inspectors/services-category.reel/services-category.html
@@ -43,7 +43,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="Share">
+    <div data-montage-id="owner" class="ServicesCategory">
         <div data-montage-id="inspector">
             <div data-montage-id="services" class="g-margin--subtract"></div>
         </div>
