Hide all the unnecessary things and don't query guestInfo from vm creation
Ticket: #20929

--- a/ui/controls/traffic-light.reel/traffic-light.html
+++ b/ui/controls/traffic-light.reel/traffic-light.html
@@ -9,7 +9,7 @@
                 "element": {"#": "owner"}
             },
             "bindings": {
-                "classList.has('is-hidden')": {"<-": "!@owner.colorMapping"},
+                "classList.has('is-hidden')": {"<-": "!@owner.colorMapping || !!@owner.isHidden"},
                 "lightClass": {"<-": "@owner.colorMapping[@owner.value]"}
             }
         }
