--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -86,7 +86,8 @@
                 "colorMapping": {"HEALTHY" : "green", "DYING": "yellow", "DEAD" : "red", "UNKNOWN": "grey"}
             },
             "bindings": {
-                "value": {"<-": "@owner.object.status ? @owner.object.status.health : 'UNKNOWN'"}
+                "value": {"<-": "@owner.object.status ? @owner.object.status.health : 'UNKNOWN'"},
+                "isHidden": {"<-": "@owner.object._isNew"} 
             }
         },
         "guestHealthStatusLabel": {
@@ -94,6 +95,9 @@
             "properties": {
                 "element": {"#": "guestHealthStatusLabel"},
                 "value": "Guest Health"
+            },
+            "bindings": {
+                "classList.has('is-hidden')": {"<-": "@owner.object._isNew"}
             }
         },
         "vmTemplateSubstitution": {
@@ -382,7 +386,7 @@
                 "path": "clones"
             },
             "bindings": {
-                "classList.has('hide')": {"<-": "!!@owner.object.parent"}
+                "classList.has('hide')": {"<-": "!!@owner.object.parent || @owner.object._isNew"}
             }
         },
         "start": {
