Fix regression related to the an optimization of the list.

--- a/ui/controls/list.reel/list.html
+++ b/ui/controls/list.reel/list.html
@@ -25,7 +25,8 @@
                 "isSelectionEnabled": true
             },
             "bindings": {
-                "content": {"<-": "@owner.object"}
+                "contentController.sortPath": {"<-": "@owner.sortPath"},
+                "content": {"<-": "@owner.content"}
             }
         },
         "item": {
