--- a/ui/controls/viewer.reel/viewer.html
+++ b/ui/controls/viewer.reel/viewer.html
@@ -19,7 +19,7 @@
                 "element": {"#": "list"}
             },
             "bindings": {
-                "object": {"<-": "@owner.object"},
+                "content": {"<-": "@owner.object"},
                 "showSubLabel": {"<-": "@owner.showSubLabel ?? @owner.userInterfaceDescriptor.subLabelExpression.defined()"}
             }
         },
