--- a/ui/sections/containers/controls/docker-collection-list.reel/docker-collection-list.html
+++ b/ui/sections/containers/controls/docker-collection-list.reel/docker-collection-list.html
@@ -12,19 +12,13 @@
                 "selectedCollection": {"<->": "@list.selectedObject"}
             }
         },
-
-        "contentController": {
-            "prototype": "montage/core/range-controller",
-            "bindings": {
-                "content": {"<-": "@owner.instances"}
-            }
-        },
-
         "list": {
             "prototype": "ui/controls/list.reel",
             "properties": {
-                "element": {"#": "dockerCollection"},
-                "controller": {"@": "contentController"}
+                "element": {"#": "dockerCollection"}
+            },
+            "bindings": {
+                "content": {"<-": "@owner.instances"}
             }
         }
     }
